[package]
name = "futures-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32", features = ["rand-std"] }
miniscript = { version = "12.0", features = ["compiler", "serde"] }
bdk_wallet = { version = "=1.2.0", features = ["keys-bip39"] }
bdk_esplora = { version = "=0.20", features = ["blocking"] }
bdk_core = "=0.4"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"

